* 2005-05-01 Jeremy Sanders <jeremy@jeremysanders.net>
	- Put in patch from James Graham to choose from list of fonts
	- Use context menu for settings, rather than button
	
* 2005-04-28 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed colour of axis/tick labels

* 2005-04-25 Jeremy Sanders <jeremy@jeremysanders.net>
	- Allow subsettings to be set in Add command
	a__b maps to a/b, e.g. Add('xy', MarkerFill__color='red')
	- Numbers can be initial letter of dataset name
	
* 2005-04-23 Jeremy Sanders <jeremy@jeremysanders.net>
	- Twiddle rounding in axis.py to try to avoid off-by-one pixel bugs
	- Move distance calculation code into Distance setting
	
* 2005-04-22 Jeremy Sanders <jeremy@jeremysanders.net>
	- Display drop down list of units based on James Graham's patch
	- Use drop down list of datasets for appropriate settings
	
* 2005-04-21 Jeremy Sanders <jeremy@jeremysanders.net>
	- Widgets can now be added if a parent allows the widget as parent
	- New item selected after widget is added
	- Removed text widget from menu and tooltip
	- Added widget buttons now in separate toolbar (ordering of
	importance and alphabetical now)
	
* 2005-04-19 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix to allow unicode font names
	- Lots more unicode fixes (like unicode labels, etc). Unicode
	characters can now be used for filenames, and axis labels
	- Handle bad descriptors in import dialog
	
* 2005-04-18 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed fitting for old versions of numarray (no isnan)
	- Fixed data reading bug, where numbers on columns which aren't
	used are propagated to next line
	- Show busy cursor while reading data and opening files, saving
	files and exporting data
	- Empty document is not "dirty", so don't show save dialog
	- Added circ, odot, and (left|right|up|down) arrow in LaTeX mode
	
* 2005-04-16 Jeremy Sanders <jeremy@jeremysanders.net>
	- Get distutils working properly with standard distutils
	- Added histogram example
