@@ -1,6 +1,7 @@
 * 2005-05-01 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Put in patch from James Graham to choose from list of fonts
 	- Use context menu for settings, rather than button
+	- Add missing descr for marker and markerSize
 	
 * 2005-04-28 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Fixed colour of axis/tick labels
